edited overall layout

--- a/Sparkfly.Main/Pages/Search.razor
+++ b/Sparkfly.Main/Pages/Search.razor
@@ -1,6 +1,6 @@
 ﻿@page "/search"
 
-<MudContainer>
+<MudContainer Class="px-0">
     <MudTextField class="object-top" @bind-Value="SearchFor" Label="Search for a track" Variant="Variant.Outlined" Adornment="Adornment.End" AdornmentIcon="@Icons.Filled.Search" AdornmentColor="Color.Primary" />
 </MudContainer>
 
