created first layout iteration for the search page

--- a/Sparkfly.Main/Shared/NavMenu.razor
+++ b/Sparkfly.Main/Shared/NavMenu.razor
@@ -4,6 +4,8 @@
     <MudNavLink Href="search" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Search">Search</MudNavLink>
 
     <br />
+    <MudDivider DividerType="DividerType.Middle"/>
+    <br />
 
     <MudNavLink Href="settings" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Settings">Settings</MudNavLink>
     <MudNavLink Href="info" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Info">About</MudNavLink>
