--- a/Sparkfly.Main/Pages/Search.razor
+++ b/Sparkfly.Main/Pages/Search.razor
@@ -1,16 +1,107 @@
 ﻿@page "/search"
 
-<MudContainer Class="px-0">
+<MudContainer Class="px-0 mb-8">
     <MudTextField class="object-top" @bind-Value="SearchFor" Label="Search for a track" Variant="Variant.Outlined" Adornment="Adornment.End" AdornmentIcon="@Icons.Filled.Search" AdornmentColor="Color.Primary" />
 </MudContainer>
 
-<MudContainer Class="mt-8">
-    <MudText>@SearchFor</MudText>
-</MudContainer>
+<MudStack>
+    <MudPaper Class="pa-4">
+        <MudStack Row="true">
+            <MudImage ObjectFit="ObjectFit.Cover" Height="56" Width="56" Src="/img/1989TV.jpg" Alt="Album cover" Elevation="25" Class="rounded-sm"/>
+            <MudStack Justify="Justify.Center" Spacing="0">
+                <MudText Typo="Typo.body1">Wildest Dreams (Taylor's ...</MudText>
+                <MudText Typo="Typo.body2">Taylor Swift</MudText>
+            </MudStack>
 
+            <MudSpacer />
 
-@*<MudTextField class="object-top" @bind-Value="SearchFor" Label="Search for a track" Variant="Variant.Outlined" Adornment="Adornment.End" AdornmentIcon="@Icons.Filled.Search" AdornmentColor="Color.Primary" />
-<MudText>@SearchFor</MudText>*@
+            <div>
+                <MudIconButton Icon="@Icons.Material.Filled.FavoriteBorder" Color="Color.Secondary" aria-label="add to queue"></MudIconButton>
+            </div>
+        </MudStack>
+    </MudPaper>
+
+    <MudPaper Class="pa-4">
+        <MudStack Row="true">
+            <MudImage ObjectFit="ObjectFit.Cover" Height="56" Width="56" Src="/img/1989.png" Alt="Album cover" Elevation="25" Class="rounded-sm"/>
+            <MudStack Justify="Justify.Center" Spacing="0">
+                <MudText Typo="Typo.body1">I Know Places</MudText>
+                <MudText Typo="Typo.body2">Taylor Swift</MudText>
+            </MudStack>
+
+            <MudSpacer />
+
+            <div>
+                <MudIconButton Icon="@Icons.Material.Filled.FavoriteBorder" Color="Color.Secondary" aria-label="add to queue"></MudIconButton>
+            </div>
+        </MudStack>
+    </MudPaper>
+
+    @*APAGAR*@
+    <MudPaper Class="pa-4">
+        <MudStack Row="true">
+            <MudImage ObjectFit="ObjectFit.Cover" Height="56" Width="56" Src="/img/1989TV.jpg" Alt="Album cover" Elevation="25" Class="rounded-sm"/>
+            <MudStack Justify="Justify.Center" Spacing="0">
+                <MudText Typo="Typo.body1">Wildest Dreams (Taylor's ...</MudText>
+                <MudText Typo="Typo.body2">Taylor Swift</MudText>
+            </MudStack>
+
+            <MudSpacer />
+
+            <div>
+                <MudIconButton Icon="@Icons.Material.Filled.FavoriteBorder" Color="Color.Secondary" aria-label="add to queue"></MudIconButton>
+            </div>
+        </MudStack>
+    </MudPaper>
+
+    <MudPaper Class="pa-4">
+        <MudStack Row="true">
+            <MudImage ObjectFit="ObjectFit.Cover" Height="56" Width="56" Src="/img/1989.png" Alt="Album cover" Elevation="25" Class="rounded-sm"/>
+            <MudStack Justify="Justify.Center" Spacing="0">
+                <MudText Typo="Typo.body1">I Know Places</MudText>
+                <MudText Typo="Typo.body2">Taylor Swift</MudText>
+            </MudStack>
+
+            <MudSpacer />
+
+            <div>
+                <MudIconButton Icon="@Icons.Material.Filled.FavoriteBorder" Color="Color.Secondary" aria-label="add to queue"></MudIconButton>
+            </div>
+        </MudStack>
+    </MudPaper>
+    <MudPaper Class="pa-4">
+        <MudStack Row="true">
+            <MudImage ObjectFit="ObjectFit.Cover" Height="56" Width="56" Src="/img/1989TV.jpg" Alt="Album cover" Elevation="25" Class="rounded-sm"/>
+            <MudStack Justify="Justify.Center" Spacing="0">
+                <MudText Typo="Typo.body1">Wildest Dreams (Taylor's ...</MudText>
+                <MudText Typo="Typo.body2">Taylor Swift</MudText>
+            </MudStack>
+
+            <MudSpacer />
+
+            <div>
+                <MudIconButton Icon="@Icons.Material.Filled.FavoriteBorder" Color="Color.Secondary" aria-label="add to queue"></MudIconButton>
+            </div>
+        </MudStack>
+    </MudPaper>
+
+    <MudPaper Class="pa-4">
+        <MudStack Row="true">
+            <MudImage ObjectFit="ObjectFit.Cover" Height="56" Width="56" Src="/img/1989.png" Alt="Album cover" Elevation="25" Class="rounded-sm"/>
+            <MudStack Justify="Justify.Center" Spacing="0">
+                <MudText Typo="Typo.body1">I Know Places</MudText>
+                <MudText Typo="Typo.body2">Taylor Swift</MudText>
+            </MudStack>
+
+            <MudSpacer />
+
+            <div>
+                <MudIconButton Icon="@Icons.Material.Filled.FavoriteBorder" Color="Color.Secondary" aria-label="add to queue"></MudIconButton>
+            </div>
+        </MudStack>
+    </MudPaper>
+    @*APAGAR*@
+</MudStack>
 
 @code {
     public string? SearchFor { get; set; }
