--- a/Sparkfly.Main/Pages/Index.razor
+++ b/Sparkfly.Main/Pages/Index.razor
@@ -1,7 +1,37 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>Current playing</PageTitle>
 
-<MudText Typo="Typo.h3" GutterBottom="true">Hello, world!</MudText>
-<MudText Class="mb-8">Welcome to your new app, powered by MudBlazor!</MudText>
-<MudAlert Severity="Severity.Normal">You can find documentation and examples on our website here: <MudLink Href="https://mudblazor.com" Typo="Typo.body2" Color="Color.Inherit"><b>www.mudblazor.com</b></MudLink></MudAlert>
+<MudStack>
+    <MudText Align="Align.Center" Typo="Typo.h6">You are listening to:</MudText>
+
+    <MudPaper Class="pa-4 d-flex flex-column justify-center" MaxWidth="255px">
+        <MudImage Class="rounded-lg align-self-center" Fluid="true" Src="/img/1989TV.jpg" Alt="Album current playing" Elevation="25" />
+
+        <MudDivider Class="my-4" DividerType="DividerType.Middle" />
+
+        <MudText Align="Align.Center" Typo="Typo.body1">Wildest Dreams (Taylor's Version)</MudText>
+        <MudText Align="Align.Center" Typo="Typo.body2">Taylor Swift</MudText>
+        <MudText Class="mt-2" Align="Align.Center" Typo="Typo.caption">Suggested by <strong>Tiffany</strong>!</MudText>
+    </MudPaper>
+
+    <MudText Class="mt-4" Align="Align.Center" Typo="Typo.h6">Playing next: </MudText>
+
+    @*TODO: make this a component ??*@
+   <MudPaper Class="pa-4">
+        <MudStack Row="true">
+            <MudImage ObjectFit="ObjectFit.Cover" Height="56" Width="56" Src="/img/1989.png" Alt="Album cover" Elevation="25" Class="rounded-sm"/>
+            <MudStack Justify="Justify.Center" Spacing="0">
+                <MudText Typo="Typo.body1">I Know Places</MudText>
+                <MudText Typo="Typo.body2">Taylor Swift</MudText>
+            </MudStack>
+
+            <MudSpacer />
+
+            <div>
+                <MudIconButton Icon="@Icons.Material.Filled.FavoriteBorder" Color="Color.Secondary" aria-label="add to queue"></MudIconButton>
+            </div>
+        </MudStack>
+    </MudPaper>
+    @*TODO: make this a component ??*@
+</MudStack>
