--- a/Sparkfly.Main/Pages/Index.razor
+++ b/Sparkfly.Main/Pages/Index.razor
@@ -5,20 +5,22 @@
 <MudStack>
     <MudText Align="Align.Center" Typo="Typo.h6">You are listening to:</MudText>
 
-    <MudPaper Class="pa-4 d-flex flex-column justify-center" MaxWidth="255px">
+    <MudPaper Class="pa-4" MaxWidth="350px">
         <MudImage Class="rounded-lg align-self-center" Fluid="true" Src="/img/1989TV.jpg" Alt="Album current playing" Elevation="25" />
 
         <MudDivider Class="my-4" DividerType="DividerType.Middle" />
 
         <MudText Align="Align.Center" Typo="Typo.body1">Wildest Dreams (Taylor's Version)</MudText>
         <MudText Align="Align.Center" Typo="Typo.body2">Taylor Swift</MudText>
-        <MudText Class="mt-2" Align="Align.Center" Typo="Typo.caption">Suggested by <strong>Tiffany</strong>!</MudText>
+        <div class="d-flex justify-center mt-2">
+            <MudText Typo="Typo.caption">Suggested by <strong>Tiffany</strong>!</MudText>
+        </div>
     </MudPaper>
 
     <MudText Class="mt-4" Align="Align.Center" Typo="Typo.h6">Playing next: </MudText>
 
     @*TODO: make this a component ??*@
-   <MudPaper Class="pa-4">
+    <MudPaper Class="pa-4">
         <MudStack Row="true">
             <MudImage ObjectFit="ObjectFit.Cover" Height="56" Width="56" Src="/img/1989.png" Alt="Album cover" Elevation="25" Class="rounded-sm"/>
             <MudStack Justify="Justify.Center" Spacing="0">
