--- a/Sparkfly.Main/_Imports.razor
+++ b/Sparkfly.Main/_Imports.razor
@@ -9,3 +9,5 @@
 @using MudBlazor
 @using Sparkfly.Main
 @using Sparkfly.Main.Shared
+@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
+@inject ProtectedSessionStorage ProtectedSessionStore
