--- a/Sparkfly.Main/Shared/MainLayout.razor
+++ b/Sparkfly.Main/Shared/MainLayout.razor
@@ -18,7 +18,7 @@
     </MudDrawer>
 
     <MudMainContent>
-        <MudContainer MaxWidth="MaxWidth.Large" Class="my-4 py-4 d-flex justify-center">
+        <MudContainer MaxWidth="MaxWidth.ExtraSmall" Class="my-4 py-4 d-flex justify-center">
             @Body
         </MudContainer>
     </MudMainContent>
