--- a/Sparkfly.Main/_Imports.razor
+++ b/Sparkfly.Main/_Imports.razor
@@ -10,4 +10,5 @@
 @using Sparkfly.Main
 @using Sparkfly.Main.Shared
 @using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
+@using static Sparkfly.Main.Data.Track
 @inject ProtectedSessionStorage ProtectedSessionStore
