refactored project file names

--- a/Sparkfly.Main/Pages/SearchPage.razor
+++ b/Sparkfly.Main/Pages/SearchPage.razor
@@ -1,5 +1,6 @@
 ﻿@page "/search"
 
+@using Sparkfly.Main.Components
 @using Sparkfly.Main.RequestAPI
 @using Sparkfly.Main.Data
 @inject Spotify spotify
