--- a/Sparkfly.Main/Pages/IndexPage.razor
+++ b/Sparkfly.Main/Pages/IndexPage.razor
@@ -2,5 +2,6 @@
 @inject NavigationManager NavigationManager
 
 @code {
-    protected override void OnInitialized() => NavigationManager.NavigateTo("/welcome");
+    protected override void OnAfterRender(bool firstRender) => NavigationManager.NavigateTo("/welcome");
+    //protected override void OnInitialized() => NavigationManager.NavigateTo("/welcome");
 }
