--- a/Sparkfly.Main/_Imports.razor
+++ b/Sparkfly.Main/_Imports.razor
@@ -11,4 +11,5 @@
 @using Sparkfly.Main.Shared
 @using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
 @using static Sparkfly.Main.Data.Track
+@using System.Net;
 @inject ProtectedSessionStorage ProtectedSessionStore
