--- a/Sparkfly.Main/Components/TrackCard.razor
+++ b/Sparkfly.Main/Components/TrackCard.razor
@@ -1,7 +1,7 @@
 ﻿@using Sparkfly.Main.Data
 @using Sparkfly.Main.Services
 
-@inject VotingHandler VotingHandler
+@inject SparkflyManager Sparkfly
 
 <MudPaper Class="pa-4">
     <MudStack Row="true">
@@ -25,5 +25,5 @@
     private const int MAX_CHARS = 26;
     [Parameter, EditorRequired] public Track Track { get; set; } = new();
 
-    private async Task EnqueueVoteAsync() => await VotingHandler.EnqueueVoteAsync(Track);
+    private async Task EnqueueVoteAsync() => await Sparkfly.EnqueueVoteAsync(Track);
 }
