implemented a TimeManager to handle the playback queue requests

--- a/Sparkfly.Main/Pages/CurrentlyPlayingPage.razor
+++ b/Sparkfly.Main/Pages/CurrentlyPlayingPage.razor
@@ -52,7 +52,7 @@
             try
             {
                 currentTrack = await Sparkfly.SpotifyGetCurrentlyPlayingAsync();
-                nextTrack = (await Sparkfly.PeekVotingQueueAsync())?.VotedTrack;
+                nextTrack = (await Sparkfly.GetVotingQueueAsync())?.Peek().VotedTrack;
 
                 await InvokeAsync(StateHasChanged);
             }
